fix letter-spacing

--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -67,27 +67,27 @@ ul
   font-size: 20px
   line-height: 1.2
   font-weight: 600
-  letter-spacing: -0.02em
+  letter-spacing: -0.024em
 .title-sm
   font-size: 22px
   line-height: 1.2
   font-weight: 400
-  letter-spacing: -0.02em
+  letter-spacing: -0.024em
 .title-md
   font-size: 32px
   line-height: 1.2
   font-weight: 400
-  letter-spacing: -0.02em
+  letter-spacing: -0.024em
 .title-lg
   font-size: 40px
   line-height: 1.2
   font-weight: 400
-  letter-spacing: -0.02em
+  letter-spacing: -0.024em
 .title-xl
   font-size: 60px
   line-height: 1.15
   font-weight: 400
-  letter-spacing: -0.02em
+  letter-spacing: -0.024em
 
 .text
   font-size: 18px
