--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -40,7 +40,7 @@
         margin-right: 0
       a
         font-size: 15px
-        letter-spacing: -0.02em
+        letter-spacing: -0.024em
         color: $color-blue-black
         transition: .2s
         &:hover
@@ -63,12 +63,12 @@
     &__phone
       font-size: 20px
       font-weight: 600
-      letter-spacing: -0.02em
+      letter-spacing: -0.024em
     &__chat
       margin-top: 5px
       font-size: 12px
       color: #07ac0d
-      letter-spacing: -0.02em
+      letter-spacing: -0.024em
       position: relative
       &::before
         content: ''
